Update 01.. Return Negative.md

--- a/Kyu 8/01.. Return Negative.md
+++ b/Kyu 8/01.. Return Negative.md
@@ -1,19 +1,7 @@
-/*
-In this simple assignment you are given a number and have to make it negative. But maybe the number is already negative?
+![image](https://github.com/user-attachments/assets/66f57b90-b86c-46f6-bace-274c65ea7167)
 
-Examples
-makeNegative(1);    // return -1
-makeNegative(-5);   // return -5
-makeNegative(0);    // return 0
-makeNegative(0.12); // return -0.12
-
-Notes
-The number can be negative already, in which case no change is required.
-Zero (0) is not checked for any specific sign. Negative zeros make no mathematical sense. */
-
-
-// ------- Solution ---------
-```javacript
+// Solution //
+```javascript
 function makeNegative(num) {
   if (num > 0)          // if number is less than 0 then it multiplies it with -1
     return num * -1
